# pdflib-python

./: .gitignore  pyproject.toml  setup.py
PDFlib/: PDFlib.py  __init__.py
